<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RequestDetails">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"

        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/request_details"
            android:textSize="30dp">

        </TextView>


    </androidx.appcompat.widget.Toolbar>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/ochre"
        app:cardCornerRadius="20dp"
        app:cardElevation="40dp"
        app:cardMaxElevation="12dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_weight="0.9">
            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/passenger_name"
                android:textSize="20dp">


            </TextView>
            <TextView
                android:id="@+id/driver_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/drivers_name"
                android:textSize="20dp"
                ></TextView>
            <TextView
                android:id="@+id/pickup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="From:"
                android:textSize="20dp"
                ></TextView>
            <TextView
                android:id="@+id/destination"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/destination"
                android:textSize="20dp"
                ></TextView>
            <TextView
                android:id="@+id/date_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date_time"
                android:textSize="20dp"
                ></TextView>
            <TextView
                android:id="@+id/cost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cost"
                android:textSize="20dp"
                ></TextView>
            <TextView
                android:id="@+id/confirmed_passengers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_of_people"
                android:textSize="20dp"
                ></TextView>
            <TextView
                android:id="@+id/space_left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/space"
                android:textSize="20dp"
                ></TextView>
        </LinearLayout>



    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/join_button"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="600dp"
        android:text="Join" />


</FrameLayout>